modified gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+database.txt
+old.composer.lock
+composer.lock
+
 #===================================================
 # Config files
 #===================================================
