--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ composer.lock
 # Cache and Logs 
 #===================================================
 /cache/*
-/logs/*
+/log/*
 /web/view_cache/*
 2_cloning_the_project_to_nodes_and_make_symlinks.sh
 
@@ -21,7 +21,7 @@ composer.lock
 /web/images/*
 /web/uploads/*
 /web/sitemap/*
-/web/favicon.ico
-/web/backend_dev_stdxb.php
-/web/frontend_dev_stdxa.php
+#/web/favicon.ico
+#/web/backend_dev_stdxb.php
+#/web/frontend_dev_stdxa.php
 
